fix: ensure black background and remove all spacing for html, body, #root

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 html,
-body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
+body,
 #root {
   margin: 0;
   padding: 0;
+  border: 0;
+  height: 100%;
+  background: #000;
 }
